<resources>
    <string name="app_name">ProjectForAndroid311</string>
    <string name="email">email</string>
    <string name="type_email">type email</string>
    <string name="password">password</string>
    <string name="type_password">type password</string>
    <string name="create_account">create account</string>
    <string name="enter_account">enter account</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="equal">=</string>
    <string name="account_name">account name</string>
    <string name="go_back_to_registration">go back to registration</string>
    <string name="floating_text_view">FLOATING TEXT VIEW</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="start_progress">Start Progress</string>
    <string name="enter_example_thread">enter_example_thread</string>
    <string name="setting">Setting</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>

    <string-array name="cities">
        <item>Moscow</item>
        <item>Saint-Petersburg</item>
        <item>Sochi</item>
        <item>Omsk</item>
    </string-array>

    <string-array name="countries">
        <item>Russia</item>
        <item>USA</item>
        <item>UK</item>
        <item>Japan</item>
    </string-array>



    <integer-array name="age">
        <item> 25 </item>
        <item> 48 </item>
    </integer-array>
</resources>