<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/show_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="here I will be"/>

    <ToggleButton
        android:id="@+id/toggle_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/toggle_button"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:layout_margin="16dp"/>

</LinearLayout>